Llama inference prototype, within 90% tokens/s of llama.cpp.